test/files/run/reify-repl-fail-gracefully.check
Type in expressions to have them evaluated.
Type :help for more information.

scala> import language.experimental.macros
import language.experimental.macros

scala> import scala.reflect.runtime.universe._
import scala.reflect.runtime.universe._

scala> 

scala> reify
<console>:12: error: missing arguments for macro method reify in class Universe
              reify
              ^

scala> 
